2023-05-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-beta01: Crossroads';git push
	git tag -a 5.1.6-beta01 -m 'all: CF dfl; fix NCZarr overwrite/removal; ncclimo: --split, --stdin docs, eamxx; ncremap: vrt xtr dyn hrz/vrt_mrv ncr_in/out, vrt non-spt dmn lrv, cpl dmn, vrt tms prs->prs, --col_dmn;';git push --tags

	* NCO 5.1.6-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha04: Monte Nido';git push
	git tag -a 5.1.6-alpha04 -m '';git push --tags

	* nco_scm.c: Fix cvs_Name back-compatibility issue

	* Perlmutter: add 'module load gsl' to ncremap/ncclimo --npo configuration

2023-05-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha03: Smoker';git push
	git tag -a 5.1.6-alpha03 -m 'ncclimo: --split, --stdin docs, eamxx; ncremap: use flg_hrz_mrv and ncr_idx_in/out to set xtr flg for hyb+dpt_3D';git push --tags

	* ncremap allow missing values, hrz/vrt dimension ordering, ncr/dcr monotonicity when computing min/max values for dpt_3d fields

2023-04-28  Charlie Zender  <zender@uci.edu>

	* Tidy man pages

	* ncclimo/ncremap reveal --npo option to users in help message

2023-04-27  Charlie Zender  <zender@uci.edu>

	* Name-generation algorithm for EAMxx works if caseid is supplied as any full filename

2023-04-25  Charlie Zender  <zender@uci.edu>

	* Change Chrysalis build procedure to use Anaconda gcc/g++ to workaround unresolved function link error in new libicuuc library

2023-04-12  Charlie Zender  <zender@uci.edu>

	* nco.texi update documentation to reflect --split and --stdin changes from 5.0.4

2023-04-11  Charlie Zender  <zender@uci.edu>

	* ncclimo: emit deprecation ERROR and HINT when invoked with --stdin

2023-04-10  Charlie Zender  <zender@uci.edu>

	* Improve pressure bounds check to account for missing values in dpt_3D grids
