@@ -1,4 +1,4 @@
-2023-05-05  Charlie Zender  <zender@uci.edu>
+2023-05-10  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.6-beta01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.6-beta01: Crossroads';git push
@@ -6,7 +6,11 @@
 
 	* NCO 5.1.6-alpha04 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha04: Monte Nido';git push
-	git tag -a 5.1.6-alpha04 -m '';git push --tags
+	git tag -a 5.1.6-alpha04 -m 'ncap2: cmp_sng';git push --tags
+
+	* ncap2 replace old nco_def_var_deflate() with new cmp_sng and nco_flt_def_out()
+
+2023-05-05  Charlie Zender  <zender@uci.edu>
 
 	* nco_scm.c: Fix cvs_Name back-compatibility issue
 
